Fix alignment

--- a/server/static/css/main.css
+++ b/server/static/css/main.css
@@ -40,7 +40,8 @@ p {
 }
 
 .constrain-text{
-  max-width: 30%;
+  max-width: 40%;
+  margin: 0 auto;
 }
 
 .splashwrapper {
